# backend-training

.github/workflows/: docker-build-push-v2.yml  docker-build-push.yml  hello-world.yml  job-summary-script.yaml  message.yaml  stratery-run.yaml  test-build-push-deploy.yml  use-vars-and-envs.yaml
database-practice/: README.md
database-practice/diagrams/: university-database.d2
database-practice/mock-data/: generate-mock-data.js  package-lock.json  package.json
database-practice/sql/: 00_create_database.sql  01_create_tables.sql  02_business_rule.sql  03_test_database.sql  04_create_views.sql  05_delete_data.sql  06_questions.sql
design-patterns/abstract-factory/: cloudServiceAbstractFactory.ts
design-patterns/adapter/: payment-adapter.ts
design-patterns/bridge/: .gitignore  notification-bridge.ts  package-lock.json  package.json
design-patterns/builder/: breafastBuilder.ts
design-patterns/chain-of-responsbility/: README.md  emailFilter.ts  package-lock.json  package.json
design-patterns/command/: .gitignore  copyText.ts  package-lock.json  package.json  tsconfig.json
design-patterns/composite/: .gitignore  package-lock.json  package.json  simple-composite.ts
docker/api-dockerfile/: Dockerfile  README.md  database.py  docker-compose.yml  docs.md  pyproject.toml  schemas.py
social-app/: .cursorignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
system-design/short-url/: .gitignore  README.md  main.py  pyproject.toml  test_main.py
system-design/web-crawler/: .gitignore  README.md  main.py  pyproject.toml
system-design/web-crawler/crawler/: __init__.py  config.py  fetcher.py  models.py  parser.py  robots_handler.py  storage.py  url_frontier.py  web_crawler.py
(+223 files in other folders)
